feat: Main Menu Button

--- a/Assets/UserInterfaces/Main Menu/MainMenuBase.uxml
+++ b/Assets/UserInterfaces/Main Menu/MainMenuBase.uxml
@@ -2,6 +2,6 @@
     <Style src="project://database/Assets/UserInterfaces/Main%20Menu/MainMenu.uss?fileID=7433441132597879392&amp;guid=3925e836331fb7147967ab093489cb03&amp;type=3#MainMenu" />
     <ui:VisualElement name="MainMenu" style="flex-grow: 1;">
         <ui:Label tabindex="-1" text="GAME TITLE" parse-escape-sequences="true" display-tooltip-when-elided="true" class="header" style="-unity-text-align: upper-center;" />
-        <ui:Button text="Button" parse-escape-sequences="true" display-tooltip-when-elided="true" style="width: 100px; -unity-text-align: middle-center; white-space: nowrap; height: 39px; text-overflow: clip;" />
+        <ui:Button text="Button" parse-escape-sequences="true" display-tooltip-when-elided="true" name="play-btn" style="width: 194px; -unity-text-align: middle-center; white-space: nowrap; height: 65px; text-overflow: clip; margin-right: auto; margin-bottom: auto; margin-left: auto; margin-top: 50px;" />
     </ui:VisualElement>
 </ui:UXML>
