--- a/Assets/UserInterfaces/USS/InGameHud.uss
+++ b/Assets/UserInterfaces/USS/InGameHud.uss
@@ -1,7 +1,5 @@
 .tile-btn {
     position: absolute;
-    left: 50%;
-    top: 50%;
     width: 50px;
     height: 50px;
     margin-top: 0;
@@ -12,10 +10,10 @@
     padding-right: 0;
     padding-bottom: 0;
     padding-left: 0;
-    transition-timing-function: ease-in-out-cubic;
+    transition-timing-function: ease-in-out-cubic, ease-in-out-cubic;
     translate: -50% -50%;
     background-color: rgba(120, 220, 232, 0);
-    transition-duration: 0.1s;
+    transition-duration: 0.1s, 0.1s;
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
     border-bottom-right-radius: 10px;
@@ -28,6 +26,7 @@
     border-right-color: rgb(255, 255, 255);
     border-top-color: rgb(255, 255, 255);
     border-bottom-color: rgb(255, 255, 255);
+    transition-property: background-color, scale;
 }
 
 .tile-btn:hover {
