feat: add CheckTile(Connected/CanBuild)

--- a/Assets/UserInterfaces/InGameHud.uxml
+++ b/Assets/UserInterfaces/InGameHud.uxml
@@ -1,4 +1,8 @@
 <ui:UXML xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" xsi="http://www.w3.org/2001/XMLSchema-instance" engine="UnityEngine.UIElements" editor="UnityEditor.UIElements" noNamespaceSchemaLocation="../../UIElementsSchema/UIElements.xsd" editor-extension-mode="False">
     <Style src="project://database/Assets/UserInterfaces/USS/InGameHud.uss?fileID=7433441132597879392&amp;guid=480c34811d4649346948f7e500456eb3&amp;type=3#InGameHud" />
-    <ui:Button name="tile-btn" class="tile-btn" style="visibility: hidden; position: relative;" />
+    <ui:Button name="tile-btn" class="tile-btn" style="visibility: hidden;" />
+    <ui:VisualElement style="flex-grow: 1; padding-top: 40px; padding-right: 40px; padding-bottom: 40px; padding-left: 40px;">
+        <ui:VisualElement style="flex-grow: 1;" />
+        <ui:VisualElement />
+    </ui:VisualElement>
 </ui:UXML>
