--- a/Assets/UserInterfaces/InGameHud.uxml
+++ b/Assets/UserInterfaces/InGameHud.uxml
@@ -5,6 +5,12 @@
     </ui:VisualElement>
     <ui:VisualElement picking-mode="Ignore" style="flex-grow: 1; padding-top: 40px; padding-right: 40px; padding-bottom: 40px; padding-left: 40px;">
         <ui:VisualElement picking-mode="Ignore" style="flex-grow: 1;" />
-        <ui:VisualElement picking-mode="Ignore" />
+        <ui:VisualElement picking-mode="Ignore">
+            <ui:VisualElement style="flex-direction: row; align-self: center;">
+                <ui:Button name="tower0-btn" class="tower-btn" />
+                <ui:Button name="tower1-btn" class="tower-btn" />
+                <ui:Button name="tower2-btn" class="tower-btn" />
+            </ui:VisualElement>
+        </ui:VisualElement>
     </ui:VisualElement>
 </ui:UXML>
