--- a/Assets/UserInterfaces/USS/InGameHud.uss
+++ b/Assets/UserInterfaces/USS/InGameHud.uss
@@ -33,3 +33,35 @@
     background-color: rgba(120, 220, 232, 0.8);
     scale: 1.2 1.2;
 }
+
+.tower-btn {
+    width: 80px;
+    height: 80px;
+    margin-top: 0;
+    margin-right: 10px;
+    margin-bottom: 0;
+    margin-left: 10px;
+    padding-top: 0;
+    padding-right: 0;
+    padding-bottom: 0;
+    padding-left: 0;
+    border-top-width: 4px;
+    border-right-width: 4px;
+    border-bottom-width: 4px;
+    border-left-width: 4px;
+    border-left-color: rgb(255, 255, 255);
+    border-right-color: rgb(255, 255, 255);
+    border-top-color: rgb(255, 255, 255);
+    border-bottom-color: rgb(255, 255, 255);
+    border-top-left-radius: 16px;
+    border-top-right-radius: 16px;
+    border-bottom-right-radius: 16px;
+    border-bottom-left-radius: 16px;
+    background-color: rgba(171, 157, 242, 0.6);
+    transition-timing-function: ease-in-out-cubic;
+    transition-duration: 0.1s;
+}
+
+.tower-btn:hover {
+    scale: 1.2 1.2;
+}
