--- a/Assets/UserInterfaces/InGameHud.uxml
+++ b/Assets/UserInterfaces/InGameHud.uxml
@@ -1,8 +1,8 @@
 <ui:UXML xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" xsi="http://www.w3.org/2001/XMLSchema-instance" engine="UnityEngine.UIElements" editor="UnityEditor.UIElements" noNamespaceSchemaLocation="../../UIElementsSchema/UIElements.xsd" editor-extension-mode="False">
     <Style src="project://database/Assets/UserInterfaces/USS/InGameHud.uss?fileID=7433441132597879392&amp;guid=480c34811d4649346948f7e500456eb3&amp;type=3#InGameHud" />
     <ui:VisualElement name="tile-btn-grp" picking-mode="Ignore" style="position: absolute; width: 100%; height: 100%;">
-        <ui:Button name="tile-btn" class="tile-btn" style="visibility: hidden;" />
-        <ui:Button name="tile-build-btn" class="tile-btn tile-build-btn" style="visibility: hidden; left: 60px;" />
+        <ui:Button name="build-tile-btn" class="tile-btn" style="visibility: hidden;" />
+        <ui:Button name="build-tower-btn" class="tile-btn tile-build-btn" style="visibility: hidden; left: 60px;" />
     </ui:VisualElement>
     <ui:VisualElement picking-mode="Ignore" style="flex-grow: 1; padding-top: 40px; padding-right: 40px; padding-bottom: 40px; padding-left: 40px;">
         <ui:VisualElement picking-mode="Ignore" style="flex-direction: row;">
@@ -20,7 +20,7 @@
                 <ui:Button name="tower0-btn" text="Laser" class="tower-btn" />
                 <ui:Button name="tower1-btn" text="Atomic" class="tower-btn" />
                 <ui:Button name="tower2-btn" text="Rail" class="tower-btn" />
-                <ui:Button name="tower2-btn" text="Shield" class="tower-btn" />
+                <ui:Button name="tower3-btn" text="Shield" class="tower-btn" />
             </ui:VisualElement>
         </ui:VisualElement>
     </ui:VisualElement>
