--- a/Assets/UserInterfaces/USS/InGameHud.uss
+++ b/Assets/UserInterfaces/USS/InGameHud.uss
@@ -1,4 +1,4 @@
-.tile-btn {
+.build-btn {
     position: absolute;
     width: 50px;
     height: 50px;
@@ -12,7 +12,6 @@
     padding-left: 0;
     transition-timing-function: ease-in-out-cubic, ease-in-out-cubic;
     translate: -50% -50%;
-    background-color: rgba(120, 220, 232, 0);
     transition-duration: 0.1s, 0.1s;
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
@@ -22,15 +21,32 @@
     border-right-width: 4px;
     border-bottom-width: 4px;
     border-left-width: 4px;
+    transition-property: background-color, scale;
+}
+
+.build-tile-btn {
+    background-color: rgba(120, 220, 232, 0);
     border-left-color: rgb(255, 255, 255);
     border-right-color: rgb(255, 255, 255);
     border-top-color: rgb(255, 255, 255);
     border-bottom-color: rgb(255, 255, 255);
-    transition-property: background-color, scale;
 }
 
-.tile-btn:hover {
+.build-tile-btn:hover {
     background-color: rgba(120, 220, 232, 0.8);
+    scale: 1.2 1.2;
+}
+
+.build-tower-btn {
+    background-color: rgba(171, 157, 242, 0.6);
+    border-left-color: rgb(0, 0, 0);
+    border-right-color: rgb(0, 0, 0);
+    border-top-color: rgb(0, 0, 0);
+    border-bottom-color: rgb(0, 0, 0);
+}
+
+.build-tower-btn:hover {
+    background-color: rgb(171, 157, 242);
     scale: 1.2 1.2;
 }
 
@@ -65,39 +81,4 @@
 
 .tower-btn:hover {
     scale: 1.2 1.2;
-}
-
-.tile-build-btn {
-    position: absolute;
-    width: 50px;
-    height: 50px;
-    margin-top: 0;
-    margin-right: 0;
-    margin-bottom: 0;
-    margin-left: 0;
-    padding-top: 0;
-    padding-right: 0;
-    padding-bottom: 0;
-    padding-left: 0;
-    transition-timing-function: ease-in-out-cubic, ease-in-out-cubic;
-    translate: -50% -50%;
-    background-color: rgba(171, 157, 242, 0.6);
-    transition-duration: 0.1s, 0.1s;
-    border-top-left-radius: 10px;
-    border-top-right-radius: 10px;
-    border-bottom-right-radius: 10px;
-    border-bottom-left-radius: 10px;
-    border-top-width: 4px;
-    border-right-width: 4px;
-    border-bottom-width: 4px;
-    border-left-width: 4px;
-    border-left-color: rgb(0, 0, 0);
-    border-right-color: rgb(0, 0, 0);
-    border-top-color: rgb(0, 0, 0);
-    border-bottom-color: rgb(0, 0, 0);
-    transition-property: background-color, scale;
-}
-
-.tile-build-btn:hover {
-    background-color: rgb(171, 157, 242);
 }
