--- a/Assets/UserInterfaces/USS/InGameHud.uss
+++ b/Assets/UserInterfaces/USS/InGameHud.uss
@@ -51,15 +51,15 @@
 }
 
 .tower-btn {
-    width: 80px;
-    height: 80px;
+    width: 100px;
+    height: 100px;
     margin-top: 0;
     margin-right: 10px;
     margin-bottom: 0;
     margin-left: 10px;
     padding-top: 0;
     padding-right: 0;
-    padding-bottom: 0;
+    padding-bottom: 15px;
     padding-left: 0;
     border-top-width: 4px;
     border-right-width: 4px;
@@ -82,4 +82,16 @@
 .tower-btn:hover {
     scale: 1.2 1.2;
     background-color: rgb(0, 0, 0);
+}
+
+.tower-cost {
+    color: rgb(255, 54, 54);
+    text-shadow: 0.5px 0.5px 2px rgb(0, 0, 0);
+    -unity-font-style: bold;
+    font-size: 20px;
+    -unity-text-align: upper-center;
+    justify-content: center;
+    align-self: center;
+    align-items: center;
+    position: absolute;
 }
