--- a/Assets/UserInterfaces/USS/InGameHud.uss
+++ b/Assets/UserInterfaces/USS/InGameHud.uss
@@ -59,7 +59,7 @@
     margin-left: 10px;
     padding-top: 0;
     padding-right: 0;
-    padding-bottom: 15px;
+    padding-bottom: 0;
     padding-left: 0;
     border-top-width: 4px;
     border-right-width: 4px;
@@ -93,5 +93,5 @@
     justify-content: center;
     align-self: center;
     align-items: center;
-    position: absolute;
+    position: relative;
 }
