--- a/Assets/UserInterfaces/USS/InGameHud.uss
+++ b/Assets/UserInterfaces/USS/InGameHud.uss
@@ -90,8 +90,13 @@
     -unity-font-style: bold;
     font-size: 20px;
     -unity-text-align: upper-center;
-    justify-content: center;
-    align-self: center;
-    align-items: center;
-    position: relative;
+    margin-top: 0;
+    margin-right: 0;
+    margin-bottom: 0;
+    margin-left: 0;
+    padding-top: 0;
+    padding-right: 0;
+    padding-bottom: 0;
+    padding-left: 0;
+    -unity-font-definition: url('project://database/Assets/Fonts/Candy_beans/Candy%20Beans%20SDF.asset?fileID=11400000&guid=4fb97fa8f3eeb234da27440138e7059d&type=2#Candy Beans SDF');
 }
